<resources>
    <string name="app_name">Activity Tracker</string>
    <string name="slogan">Пожалуй лучший\nфитнес трекер в ДВФУ</string>
    <string name="sub_slogan">Созданный студентами 2-ого курса</string>
    <string name="registration_button_text">Зарегистрироваться</string>
    <string name="login_button_text">Уже есть аккаунт?</string>
    <string name="login_screen_title">Вход</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="continue_button_text">Войти</string>
    <string name="registration_title">Регистрация</string>
    <string name="duplicate_password_hint">Повторите пароль</string>
    <string name="name_hint">Имя</string>
    <string name="sex_hint">Пол</string>
    <string name="sex_man">Мужской</string>
    <string name="sex_woman">Женский</string>
    <string name="sex_other">Другое</string>
    <string name="important_info">Нажимая на кнопку, вы соглашаетесь\n с
        <a href="">политикой конфиденциальности</a>
        и обработки персональных
        данных, а также принимаете
        <a href="">пользовательское соглашение</a></string>
    <string name="mono_logo_description">одноцветный логотип</string>
    <string name="mono_title_description">одноцветное название</string>
    <string name="riders_image_description">велосипедисты</string>
    <string name="bg_description">волны</string>
    <string name="logo_description">логотип</string>
    <string name="title_description">название</string>
    <string name="back_button_description">назад</string>
<<<<<<< Updated upstream
</resources>
=======
    <string name="activity">Активность</string>
    <string name="profile">Профиль</string>
    <string name="time_to_train">Время потренить</string>
    <string name="time_to_train_button">Нажимай на кнопку ниже и начинаем\nтрекать активность</string>
    <string name="other_activities">Пользователей</string>
    <string name="personal_activities">Мои</string>
    <string name="delete_act">Удалить активность</string>
    <string name="share">Поделиться</string>
    <string name="comment">Комментарий</string>
    <string name="change_pass">Изменить пароль</string>
    <string name="repeat_pass">Повторите пароль</string>
    <string name="old_pass">Старый пароль</string>
    <string name="new_pass">Новый пароль</string>
    <string name="exit">Выйти</string>
    <string name="save">Сохранить</string>
    <string name="accept">Принять</string>
    <string name="start_title">Погнали? :)</string>
    <string name="start_button">Начать</string>
</resources> 
>>>>>>> Stashed changes
